# azure_introduction

./: .env  .gitignore  create_resource_group.sh  create_simple.sh  delete_all.sh  delete_resource_group.sh
blob/: create_blob.sh  download_file.sh  upload_file.sh
postgres/: create_database.sh  pyproject.toml  request_postgres.py  script_sqlalchemy.py
python_pipeline/: create_from_json.sh  create_pipeline.sh
python_pipeline/json/: ARMTemplateForFactory.json  fake_batch_properties.json  fake_storage_properties.json  pipeline_properties.json
python_pipeline_ARM/: create_factory.sh
python_pipeline_ARM/json/: fake_parameters.json
